--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -29,7 +29,7 @@ jobs:
           context: .
           file: ./Dockerfile.prd
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/auth-service:latest
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/doctors-management-service:latest
 
       - name: 🔒 Logout from Docker Hub
         run: docker logout
