--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "auth-service",
-  "version": "1.0.5",
+  "name": "doctors-management-service",
+  "version": "1.0.0",
   "description": "This service is responsible for user management and token management.",
   "main": "dist/main/server.js",
   "scripts": {
