--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -2,14 +2,14 @@ name: 🛠️ (CI) - Main
 
 on:
   workflow_run:
-      workflows: ["(Health Check main)"]
-      types:
-          - completed
+    workflows: ["(Code Health Check - Main)"]
+    types:
+      - completed
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }} 
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v3
@@ -29,7 +29,9 @@ jobs:
           context: .
           file: ./Dockerfile.prd
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/doctors-management-service:latest
+          tags: |
+            ${{ vars.DOCKERHUB_USERNAME }}/doctors-management-service:latest
+            ${{ vars.DOCKERHUB_USERNAME }}/doctors-management-service:${{ github.sha }}
 
       - name: 🔒 Logout from Docker Hub
         run: docker logout
